--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,11 @@ name = "win-security-identifier"
 version = "0.1.0"
 edition = "2024"
 
+[features]
+default = ["std"]
+std = ["alloc"]
+alloc = []
+
 [dependencies]
 arrayvec = "0.7.6"
 smallvec = "1.15"
