--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,14 +15,17 @@ version = "0.1.0"
 edition = "2024"
 
 [features]
-default = ["std", "dep:smallvec"]
-std = ["alloc"]
+default = ["std"]
+std = ["alloc", "dep:smallvec"]
 alloc = []
 macro = ["dep:sid_macro"]
+serde = ["dep:serde", "dep:arrayvec"]
 
 [dependencies]
+serde = { version = "1", optional = true }
 parsing = { workspace = true }
 thiserror = { workspace = true }
+arrayvec = { workspace = true, optional = true }
 num_enum = "0.7"
 sid_macro = { workspace = true, optional = true }
 
@@ -45,6 +48,7 @@ features = [
 serde = { version = "1", features = ["derive"] }
 proptest = "1.7.0"
 serde_json = "1"
+serde_test = "1"
 
 
 [build-dependencies]
