--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,8 @@ macro = ["dep:sid_macro"]
 serde = ["dep:serde", "dep:arrayvec"]
 
 [dependencies]
+cfg-if = "1"
+delegate = "0.13"
 serde = { version = "1", optional = true }
 parsing = { workspace = true }
 thiserror = { workspace = true }
