--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,10 @@
 [workspace]
 members = [".", "parsing", "macro"]
 resolver = "2"
+package.version = "0.1.0"
+package.authors = ["Mickaël Véril <mickael.veril@wanadoo.fr"]
+package.license = "MIT OR Apache-2.0"
+package.edition = "2024"
 
 [workspace.dependencies]
 arrayvec = "0.7"
@@ -8,11 +12,21 @@ thiserror = "2"
 parsing = { path = "parsing", package = "win-security-identifier-parsing" }
 sid_macro = { path = "macro", package = "win-security-identifier-macro" }
 
-
 [package]
 name = "win-security-identifier"
-version = "0.1.0"
-edition = "2024"
+description = "Windows Security Identifier (SID) library"
+keywords   = ["windows", "sid", "security-identifier", "acl", "sddl"]
+categories = [
+  "os::windows-apis",
+  "api-bindings",
+  "authentication",
+  "data-structures",
+]
+license.workspace = true
+version.workspace = true
+authors.workspace = true
+edition.workspace = true
+
 
 [features]
 default = ["std"]
@@ -56,3 +70,61 @@ serde_test = "1"
 [build-dependencies]
 autocfg = "1.5.0"
 version_check = "0.9.5"
+
+[lints]
+workspace = true
+
+[workspace.lints.rust]
+unused = "warn"
+future_incompatible = "deny"
+
+[workspace.lints.clippy]
+all = { level = "warn", priority = -1 }
+pedantic = { level = "warn", priority = -1 }
+nursery = { level = "warn", priority = -1 }
+cargo = {level = "warn", priority = -1}
+needless_pass_by_value = "warn"
+implicit_clone = "warn"
+unnecessary_wraps = "warn"
+missing_const_for_fn = "warn"
+missing_inline_in_public_items = "warn"
+unnecessary_safety_doc = "deny"
+
+
+
+# ---- Strong DENY (CI-breaking, catch critical bugs) ----
+unwrap_used = "deny"                      # Avoid panics in production.
+expect_used = "deny"                      # Same as unwrap, no `.expect`.
+panic = "deny"                            # No panic! in library code.
+todo = "deny"                             # No todo! in shipped code.
+print_stdout = "deny"                     # Use logging, not println.
+print_stderr = "deny"                     # Use logging, not eprintln.
+dbg_macro = "deny"                        # No dbg! in release builds.
+mem_forget = "deny"                       # Prevent memory leaks.
+await_holding_lock = "deny"               # Prevent async deadlocks with held locks.
+exit = "deny"                             # Libraries must not kill the process.
+
+# ---- Useful WARN (signal, but not blocking) ----
+undocumented_unsafe_blocks = "warn"       # Every unsafe block must be justified with SAFETY.
+missing_assert_message = "warn"           # Clear messages for all asserts.
+integer_division = "warn"                 # Be explicit about truncating integer division.
+indexing_slicing = "warn"                 # Can panic if index is wrong.
+float_arithmetic = "warn"                 # Flag nondeterministic floating arithmetic.
+mutable_key_type = "warn"                 # Prevent mutable keys in maps (subtle bugs).
+manual_non_exhaustive = "warn"            # Use #[non_exhaustive] instead of manual tricks.
+wrong_self_convention = "warn"            # Enforce idiomatic naming for as_/to_/into_ methods.
+rc_mutex = "warn" 
+use_debug = "warn"
+multiple_unsafe_ops_per_block = "warn"
+
+[workspace.lints.rustdoc]
+all = "warn"
+broken_intra_doc_links = "forbid"
+private_intra_doc_links = "deny"
+invalid_rust_codeblocks = "deny"
+bare_urls = "warn"
+missing_crate_level_docs = "warn"
+alloc_instead_of_core = "warn"
+std_instead_of_alloc = "warn"
+std_instead_of_core = "warn"
+
