--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -86,7 +86,7 @@ jobs:
 
 
   # ============================================================
-  # 2) no_std job: detection + compile (core & alloc)
+  # 2) no_std job: detection (Nu) + compile (core & alloc) en 100% Nushell
   # ============================================================
   no-std:
     name: no_std (Nu detect core/alloc → build)
@@ -96,11 +96,14 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Install Nushell (apt → snap → cargo fallback)
+      - name: Install Nushell (prefer snap; fallback cargo)
+        shell: bash
         run: |
-          set -e
-          if command -v nu >/dev/null 2>&1; then exit 0; fi
-          if sudo apt-get update -y && sudo apt-get install -y nushell; then exit 0; fi
+          set -euxo pipefail
+          if command -v nu >/dev/null 2>&1; then
+            nu -v || true
+            exit 0
+          fi
           if command -v snap >/dev/null 2>&1; then
             sudo snap install nushell --classic || true
           fi
@@ -109,16 +112,12 @@ jobs:
             rustup update stable
             cargo install nu
           fi
-      
-      - name: Verify Nushell
-        shell: nu {0}
-        run: |
-          # prints the version and exits 0
-          version
-
+          nu -v || true
 
       - name: Toolchain + no_std target
+        shell: bash
         run: |
+          set -euxo pipefail
           rustup set profile minimal
           rustup update stable
           rustup default stable
@@ -126,10 +125,10 @@ jobs:
 
       # --------------------------
       # Step: detect-nostd (Nu)
-      # - Trouve les packages lib
-      # - Construit CORE_MATRIX: args core = --no-default-features + toutes les features non [default,std,alloc]
-      # - Expose:
-      #     TARGET_BARE, PKG_LIST (JSON), CORE_MATRIX (JSON)
+      # - Find workspace lib packages
+      # - Build CORE_MATRIX: --no-default-features + all non-[default,std,alloc] features
+      # - Outputs (single-line JSON via `to json --raw`):
+      #     TARGET_BARE, PKG_LIST, CORE_MATRIX
       # --------------------------
       - name: detect-nostd (Nu)
         id: detect-nostd
@@ -138,7 +137,7 @@ jobs:
           let TARGET_BARE = "x86_64-unknown-none"
           let meta = (cargo metadata --no-deps --format-version=1 | from json)
 
-          # workspace members that expose a lib target
+          # workspace members exposing a 'lib' target
           let pkgs = (
             $meta.packages
             | where {|p| $meta.workspace_members | any {|id| $id == $p.id } }
@@ -147,39 +146,30 @@ jobs:
             | uniq
           )
 
-          # build core args per package
           let core_matrix = (
             $pkgs | each {|name|
-              let feats_cols = (
-                $meta.packages
-                | where name == $name
-                | get 0
-                | get features
-                | columns
-              )
-              let extra = (
-                $feats_cols
-                | where {|f| $f != "default" and $f != "std" and $f != "alloc"}
-                | str join ","
-              )
+              let feats_cols = ($meta.packages | where name == $name | get 0 | get features | columns)
+              let extra = ($feats_cols | where {|f| $f != "default" and $f != "std" and $f != "alloc"} | str join ",")
               let args = if ($extra | is-empty) { "--no-default-features" } else { $"--no-default-features --features ($extra)" }
               { pkg: $name, args: $args }
             }
           )
 
-          # outputs (single-line JSON)
+          # outputs: compact JSON (no newlines) — `--raw` suffit
           $"TARGET_BARE=($TARGET_BARE)" | save --append $env.GITHUB_OUTPUT
           $"PKG_LIST=($pkgs | to json --raw)" | save --append $env.GITHUB_OUTPUT
           $"CORE_MATRIX=($core_matrix | to json --raw)" | save --append $env.GITHUB_OUTPUT
 
       # --------------------------
       # Step: detect-alloc (Nu)
-      # - Pour les packages qui exposent "alloc", construit ALLOC_MATRIX
-      #   args alloc = --no-default-features --features alloc[,extras...]
+      # - For packages with an "alloc" feature, build ALLOC_MATRIX
+      #   args = --no-default-features --features alloc[,extras...]
       # --------------------------
       - name: detect-alloc (Nu)
         id: detect-alloc
         shell: nu {0}
+        env:
+          PKG_LIST: ${{ steps.detect-nostd.outputs.PKG_LIST }}
         run: |
           let meta = (cargo metadata --no-deps --format-version=1 | from json)
           let pkgs = ($env.PKG_LIST | from json)
@@ -188,11 +178,7 @@ jobs:
             $pkgs | each {|name|
               let feats_cols = ($meta.packages | where name == $name | get 0 | get features | columns)
               if ($feats_cols | any {|f| $f == "alloc"}) {
-                let extra = (
-                  $feats_cols
-                  | where {|f| $f != "default" and $f != "std" and $f != "alloc"}
-                  | str join ","
-                )
+                let extra = ($feats_cols | where {|f| $f != "default" and $f != "std" and $f != "alloc"} | str join ",")
                 let args = if ($extra | is-empty) {
                   "--no-default-features --features alloc"
                 } else {
@@ -206,17 +192,18 @@ jobs:
           $"ALLOC_MATRIX=($alloc_matrix | to json --raw)" | save --append $env.GITHUB_OUTPUT
 
       # --------------------------
-      # Build: no_std (Nu) — check + build pour core & alloc
+      # Build: no_std (Nu) — check + build for core & alloc
       # --------------------------
       - name: Cargo check (no_std) [Nu]
         shell: nu {0}
+        env:
+          TARGET_BARE: ${{ steps.detect-nostd.outputs.TARGET_BARE }}
+          CORE_MATRIX: ${{ steps.detect-nostd.outputs.CORE_MATRIX }}
+          ALLOC_MATRIX: ${{ steps.detect-alloc.outputs.ALLOC_MATRIX }}
         run: |
-          let TARGET = $"${{ steps.detect-nostd.outputs.TARGET_BARE }}"
-          let core  = ($"{{{{ steps.detect-nostd.outputs.CORE_MATRIX }}}}" | from json)
-          let alloc = (
-            if ($"{{{{ steps.detect-alloc.outputs.ALLOC_MATRIX || '[]' }}}}" | is-empty) { [] } 
-            else { ($"{{{{ steps.detect-alloc.outputs.ALLOC_MATRIX || '[]' }}}}" | from json) }
-          )
+          let TARGET = $env.TARGET_BARE
+          let core  = ($env.CORE_MATRIX  | from json)
+          let alloc = (if ($env.ALLOC_MATRIX | is-empty) { [] } else { $env.ALLOC_MATRIX | from json })
           let final = ($core | append $alloc)
 
           for row in $final {
@@ -228,13 +215,14 @@ jobs:
 
       - name: Cargo build (no_std, release) [Nu]
         shell: nu {0}
+        env:
+          TARGET_BARE: ${{ steps.detect-nostd.outputs.TARGET_BARE }}
+          CORE_MATRIX: ${{ steps.detect-nostd.outputs.CORE_MATRIX }}
+          ALLOC_MATRIX: ${{ steps.detect-alloc.outputs.ALLOC_MATRIX }}
         run: |
-          let TARGET = $"${{ steps.detect-nostd.outputs.TARGET_BARE }}"
-          let core  = ($"{{{{ steps.detect-nostd.outputs.CORE_MATRIX }}}}" | from json)
-          let alloc = (
-            if ($"{{{{ steps.detect-alloc.outputs.ALLOC_MATRIX || '[]' }}}}" | is-empty) { [] } 
-            else { ($"{{{{ steps.detect-alloc.outputs.ALLOC_MATRIX || '[]' }}}}" | from json) }
-          )
+          let TARGET = $env.TARGET_BARE
+          let core  = ($env.CORE_MATRIX  | from json)
+          let alloc = (if ($env.ALLOC_MATRIX | is-empty) { [] } else { $env.ALLOC_MATRIX | from json })
           let final = ($core | append $alloc)
 
           for row in $final {
