--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,6 +40,7 @@ jobs:
 
       - name: Set up Rust toolchain (${{ matrix.toolchain }})
         run: |
+          set -euxo pipefail
           rustup set profile minimal
           rustup update ${{ matrix.toolchain }}
           rustup default ${{ matrix.toolchain }}
@@ -60,33 +61,46 @@ jobs:
 
       - name: Show Rust versions
         run: |
+          set -euxo pipefail
           rustc -Vv
           cargo -V
 
+      # Security audit on ubuntu + nightly (std-only)
       - name: Install cargo-audit (ubuntu-nightly only)
         if: ${{ matrix.os == 'ubuntu-latest' && matrix.toolchain == 'nightly' }}
         run: |
+          set -euxo pipefail
           cargo install --locked cargo-audit || echo "cargo-audit already installed"
 
       - name: Run cargo audit (ubuntu-nightly only)
         if: ${{ matrix.os == 'ubuntu-latest' && matrix.toolchain == 'nightly' }}
-        run: cargo audit
+        run: |
+          set -euxo pipefail
+          cargo audit
 
       - name: Check code format
-        run: cargo fmt --all -- --check
+        run: |
+          set -euxo pipefail
+          cargo fmt --all -- --check
 
       - name: Run Clippy (deny warnings)
-        run: cargo clippy --workspace --all-targets --all-features -- -D warnings
+        run: |
+          set -euxo pipefail
+          cargo clippy --workspace --all-targets --all-features -- -D warnings
 
       - name: Build workspace
-        run: cargo build --workspace --all-features
+        run: |
+          set -euxo pipefail
+          cargo build --workspace --all-features
 
       - name: Run tests
-        run: cargo test --workspace --all-features --all-targets -- --nocapture
+        run: |
+          set -euxo pipefail
+          cargo test --workspace --all-features --all-targets -- --nocapture
 
 
   # ============================================================
-  # 2) no_std job: detection (Nu) + compile (core & alloc) en 100% Nushell
+  # 2) no_std job: detection (Nu) + compile (core & alloc) in pure Nushell
   # ============================================================
   no-std:
     name: no_std (Nu detect core/alloc → build)
@@ -146,19 +160,21 @@ jobs:
             | uniq
           )
 
+          # build core args per package
           let core_matrix = (
             $pkgs | each {|name|
-              let feats_cols = ($meta.packages | where name == $name | get 0 | get features | columns)
+              let pkg = ($meta.packages | where name == $name | first)
+              let feats_cols = ($pkg.features | columns)
               let extra = ($feats_cols | where {|f| $f != "default" and $f != "std" and $f != "alloc"} | str join ",")
               let args = if ($extra | is-empty) { "--no-default-features" } else { $"--no-default-features --features ($extra)" }
               { pkg: $name, args: $args }
             }
           )
 
-          # outputs: compact JSON (no newlines) — `--raw` suffit
-          $"TARGET_BARE=($TARGET_BARE)" | save --append $env.GITHUB_OUTPUT
-          $"PKG_LIST=($pkgs | to json --raw)" | save --append $env.GITHUB_OUTPUT
-          $"CORE_MATRIX=($core_matrix | to json --raw)" | save --append $env.GITHUB_OUTPUT
+          # outputs (compact JSON)
+          $"TARGET_BARE=($TARGET_BARE)"                 | save --append $env.GITHUB_OUTPUT
+          $"PKG_LIST=($pkgs | to json --raw)"          | save --append $env.GITHUB_OUTPUT
+          $"CORE_MATRIX=($core_matrix | to json --raw)"| save --append $env.GITHUB_OUTPUT
 
       # --------------------------
       # Step: detect-alloc (Nu)
@@ -172,21 +188,29 @@ jobs:
           PKG_LIST: ${{ steps.detect-nostd.outputs.PKG_LIST }}
         run: |
           let meta = (cargo metadata --no-deps --format-version=1 | from json)
-          let pkgs = ($env.PKG_LIST | from json)
+          let pkgs = (($env.PKG_LIST? | default "[]") | from json)
+
+          if ($pkgs | is-empty) {
+            $"ALLOC_MATRIX=[]" | save --append $env.GITHUB_OUTPUT
+            exit 0
+          }
 
           let alloc_matrix = (
-            $pkgs | each {|name|
-              let feats_cols = ($meta.packages | where name == $name | get 0 | get features | columns)
-              if ($feats_cols | any {|f| $f == "alloc"}) {
-                let extra = ($feats_cols | where {|f| $f != "default" and $f != "std" and $f != "alloc"} | str join ",")
-                let args = if ($extra | is-empty) {
-                  "--no-default-features --features alloc"
-                } else {
-                  $"--no-default-features --features alloc,($extra)"
+            $pkgs
+            | each {|name|
+                let pkg = ($meta.packages | where name == $name | first)
+                let feat_cols = ($pkg.features | columns)
+                if ($feat_cols | any {|f| $f == "alloc"}) {
+                  let extra = ($feat_cols | where {|f| $f != "default" and $f != "std" and $f != "alloc"} | str join ",")
+                  let args = if ($extra | is-empty) {
+                    "--no-default-features --features alloc"
+                  } else {
+                    $"--no-default-features --features alloc,($extra)"
+                  }
+                  { pkg: $name, args: $args }
                 }
-                { pkg: $name, args: $args }
               }
-            } | compact
+            | compact
           )
 
           $"ALLOC_MATRIX=($alloc_matrix | to json --raw)" | save --append $env.GITHUB_OUTPUT
@@ -197,37 +221,47 @@ jobs:
       - name: Cargo check (no_std) [Nu]
         shell: nu {0}
         env:
-          TARGET_BARE: ${{ steps.detect-nostd.outputs.TARGET_BARE }}
-          CORE_MATRIX: ${{ steps.detect-nostd.outputs.CORE_MATRIX }}
+          TARGET_BARE:  ${{ steps.detect-nostd.outputs.TARGET_BARE }}
+          CORE_MATRIX:  ${{ steps.detect-nostd.outputs.CORE_MATRIX }}
           ALLOC_MATRIX: ${{ steps.detect-alloc.outputs.ALLOC_MATRIX }}
         run: |
           let TARGET = $env.TARGET_BARE
-          let core  = ($env.CORE_MATRIX  | from json)
-          let alloc = (if ($env.ALLOC_MATRIX | is-empty) { [] } else { $env.ALLOC_MATRIX | from json })
-          let final = ($core | append $alloc)
+          let core   = (($env.CORE_MATRIX?  | default "[]") | from json)
+          let alloc  = (($env.ALLOC_MATRIX? | default "[]") | from json)
+          let final  = ($core | append $alloc)
+
+          if ($final | is-empty) {
+            print "No no_std packages detected. Skipping."
+            exit 0
+          }
 
           for row in $final {
-            let pkg = $row.pkg
+            let pkg  = $row.pkg
             let args = ($row.args | split row ' ')
-            print $">> check: ($pkg) @ ($TARGET) (..)"
+            print $">> check: ($pkg) @ ($TARGET)"
             ^cargo check -p $pkg --target $TARGET ...$args
           }
 
       - name: Cargo build (no_std, release) [Nu]
         shell: nu {0}
         env:
-          TARGET_BARE: ${{ steps.detect-nostd.outputs.TARGET_BARE }}
-          CORE_MATRIX: ${{ steps.detect-nostd.outputs.CORE_MATRIX }}
+          TARGET_BARE:  ${{ steps.detect-nostd.outputs.TARGET_BARE }}
+          CORE_MATRIX:  ${{ steps.detect-nostd.outputs.CORE_MATRIX }}
           ALLOC_MATRIX: ${{ steps.detect-alloc.outputs.ALLOC_MATRIX }}
         run: |
           let TARGET = $env.TARGET_BARE
-          let core  = ($env.CORE_MATRIX  | from json)
-          let alloc = (if ($env.ALLOC_MATRIX | is-empty) { [] } else { $env.ALLOC_MATRIX | from json })
-          let final = ($core | append $alloc)
+          let core   = (($env.CORE_MATRIX?  | default "[]") | from json)
+          let alloc  = (($env.ALLOC_MATRIX? | default "[]") | from json)
+          let final  = ($core | append $alloc)
+
+          if ($final | is-empty) {
+            print "No no_std packages detected. Skipping."
+            exit 0
+          }
 
           for row in $final {
-            let pkg = $row.pkg
+            let pkg  = $row.pkg
             let args = ($row.args | split row ' ')
-            print $">> build: ($pkg) @ ($TARGET) (..)"
+            print $">> build: ($pkg) @ ($TARGET)"
             ^cargo build -p $pkg --release --target $TARGET ...$args
           }
