--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -149,32 +149,54 @@ jobs:
         shell: nu {0}
         run: |
           let TARGET_BARE = "x86_64-unknown-none"
-          let meta = (cargo metadata --no-deps --format-version=1 | from json)
-
-          # workspace members exposing a 'lib' target
+          let meta     = (cargo metadata --no-deps --format-version=1 | from json)
+          let members  = $meta.workspace_members
+            
+          # Select workspace packages by id, then require at least one *library-like* target
+          let lib_kinds = [lib rlib staticlib cdylib dylib]
           let pkgs = (
             $meta.packages
-            | where {|p| $meta.workspace_members | any {|id| $id == $p.id } }
-            | where {|p| $p.targets | any {|t| $t.kind | any {|k| $k == "lib"} } }
+            | where {|p| $members | any {|m| $m == $p.id } }
+            | where {|p|
+                $p.targets
+                | any {|t|
+                    ($t.kind? | default [])
+                    | any {|k| $lib_kinds | any {|lk| $lk == $k } }
+                  }
+              }
             | get name
             | uniq
           )
-
-          # build core args per package
+            
+          if ($pkgs | is-empty) {
+            # Expose empty outputs so downstream steps don’t crash, but fail the job for visibility
+            $"TARGET_BARE=($TARGET_BARE)"            | save --append $env.GITHUB_OUTPUT
+            $"PKG_LIST=[]"                           | save --append $env.GITHUB_OUTPUT
+            $"CORE_MATRIX=[]"                        | save --append $env.GITHUB_OUTPUT
+            print "No library packages found in workspace. Aborting no_std flow."
+            exit 1
+          }
+            
+          # Build core args per package: --no-default-features + all non-[default,std,alloc] features
           let core_matrix = (
             $pkgs | each {|name|
-              let pkg = ($meta.packages | where name == $name | first)
-              let feats_cols = ($pkg.features | columns)
-              let extra = ($feats_cols | where {|f| $f != "default" and $f != "std" and $f != "alloc"} | str join ",")
-              let args = if ($extra | is-empty) { "--no-default-features" } else { $"--no-default-features --features ($extra)" }
+              let pkg        = ($meta.packages | where name == $name | first)
+              let feat_cols  = ($pkg.features | columns)
+              let extra      = ($feat_cols | where {|f| $f != "default" and $f != "std" and $f != "alloc"} | str join ",")
+              let args       = if ($extra | is-empty) { "--no-default-features" } else { $"--no-default-features --features ($extra)" }
               { pkg: $name, args: $args }
             }
           )
-
-          # outputs (compact JSON)
-          $"TARGET_BARE=($TARGET_BARE)"                 | save --append $env.GITHUB_OUTPUT
-          $"PKG_LIST=($pkgs | to json --raw)"          | save --append $env.GITHUB_OUTPUT
-          $"CORE_MATRIX=($core_matrix | to json --raw)"| save --append $env.GITHUB_OUTPUT
+            
+          # Outputs (single line JSON via --raw)
+          $"TARGET_BARE=($TARGET_BARE)"                  | save --append $env.GITHUB_OUTPUT
+          $"PKG_LIST=($pkgs | to json --raw)"            | save --append $env.GITHUB_OUTPUT
+          $"CORE_MATRIX=($core_matrix | to json --raw)"  | save --append $env.GITHUB_OUTPUT
+            
+          # Optional: log what we found (human friendly)
+          print "== no_std candidates (lib targets) =="
+          $pkgs | each {|n| print $"- ($n)"}
+            
 
       # --------------------------
       # Step: detect-alloc (Nu)
